Configure carousel widget

--- a/src/WebSite/wwwroot/css/carousel.css
+++ b/src/WebSite/wwwroot/css/carousel.css
@@ -1,53 +1,67 @@
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
+
 /* Carousel base class */
+
 .carousel {
-  height: 300px;
-  margin-bottom: 60px;
+    height: 300px;
 }
+
 .carousel-caption {
-  z-index: 10; /* Since positioning the image, we need to help out the caption */
-  text-shadow: none !important;
+    z-index: 10;
+    /* Since positioning the image, we need to help out the caption */
+    text-shadow: none !important;
 }
+
 
 /* Declare heights because of positioning of img element */
+
 .carousel .item {
-  height: 300px;
-  
+    height: 300px;
 }
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 300px;
+
+.carousel-inner>.item>img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 300px;
+}
+
+.carousel-control .glyphicon {
+    color: #000;
 }
 
 .carousel-control.left {
-  background-color: #FFF;
-  background-image: none !important;
+    background-color: #FFF;
+    background-image: none !important;
 }
-.carousel-control.left {
-  background-color: #FFF;  
-  background-image: none !important;
+
+.carousel-control.right {
+    background-color: #FFF;
+    background-image: none !important;
 }
 
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
+
 /* Center align the text within the three columns below the carousel */
+
 .marketing .col-lg-4 {
-  margin-bottom: 20px;
-  text-align: center;
+    margin-bottom: 20px;
+    text-align: center;
 }
+
 .marketing h2 {
-  font-weight: 400;
+    font-weight: 400;
 }
+
 .marketing .col-lg-4 p {
-  margin-right: 10px;
-  margin-left: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 
@@ -55,14 +69,17 @@
 ------------------------- */
 
 .featurette-divider {
-  margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    margin: 80px 0;
+    /* Space out the Bootstrap <hr> more */
 }
 
+
 /* Thin out the marketing headings */
+
 .featurette-heading {
-  font-weight: 300;
-  line-height: 1;
-  letter-spacing: -1px;
+    font-weight: 300;
+    line-height: 1;
+    letter-spacing: -1px;
 }
 
 
@@ -70,35 +87,34 @@
 -------------------------------------------------- */
 
 @media (min-width: 768px) {
-  /* Navbar positioning foo */
-  .navbar-wrapper {
-    margin-top: 20px;
-  }
-  .navbar-wrapper .container {
-    padding-right: 15px;
-    padding-left: 15px;
-  }
-  .navbar-wrapper .navbar {
-    padding-right: 0;
-    padding-left: 0;
-    border-radius: 4px; /* The navbar becomes detached from the top, so we round the corners */
-  }
-
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 20px;
-    font-size: 21px;
-    line-height: 1.4;
-    color: #000;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
+    /* Navbar positioning foo */
+    .navbar-wrapper {
+        margin-top: 20px;
+    }
+    .navbar-wrapper .container {
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    .navbar-wrapper .navbar {
+        padding-right: 0;
+        padding-left: 0;
+        border-radius: 4px;
+        /* The navbar becomes detached from the top, so we round the corners */
+    }
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 21px;
+        line-height: 1.4;
+        color: #000;
+    }
+    .featurette-heading {
+        font-size: 50px;
+    }
 }
 
 @media (min-width: 992px) {
-  .featurette-heading {
-    margin-top: 120px;
-  }
+    .featurette-heading {
+        margin-top: 120px;
+    }
 }
