--- a/src/WebSite/Views/Shared/_Vacancy.cshtml
+++ b/src/WebSite/Views/Shared/_Vacancy.cshtml
@@ -25,7 +25,7 @@
         </div>
         <div class="row share">
             <div class="col-md-4">
-                <span class="label category-label label-default">@Model.Category.Name</span>
+                <span class="label @Model.Category.CssClass label-default">@Model.Category.Name</span>
             </div>
             <div class="col-md-8 text-right">
                 <a class="btn btn-default" href="@Model.ShareUrl">View details...&nbsp;<i class="glyphicon glyphicon-eur"></i></a>
