--- a/src/WebSite/wwwroot/css/carousel.css
+++ b/src/WebSite/wwwroot/css/carousel.css
@@ -1,32 +1,89 @@
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
-
-/* Carousel base class */
-
 .carousel {
-    height: 300px;
+    height: 350px;
+}
+
+.carousel-indicators {}
+
+.carousel-indicators li {
+    background-color: #000 !important;
+    border-radius: 0 !important;
+    width: 20px !important;
+    height: 3px !important;
+    border: none !important;
+    margin: 0 !important;
+}
+
+.carousel-indicators .active {
+    color: #d53b07 !important;
+    background-color: #d53b07 !important;
 }
 
 .carousel-caption {
     z-index: 10;
+    right: 20px !important;
+    left: 20px !important;
     /* Since positioning the image, we need to help out the caption */
     text-shadow: none !important;
+    bottom: auto !important;
+}
+
+.carousel-caption .label-default {
+    font-size: 7pt;
 }
 
 
 /* Declare heights because of positioning of img element */
 
 .carousel .item {
-    height: 300px;
+    height: 350px;
 }
 
-.carousel-inner>.item>img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    height: 300px;
+.carousel-control {
+    width: auto !important;
+}
+
+.category {
+    padding: 3px;
+    box-decoration-break: clone;
+}
+
+.category-1 {
+    background-color: #662079 !important;
+    color: #FFF;
+}
+
+.category-2 {
+    background-color: #6296d0 !important;
+    color: #FFF;
+}
+
+.category-3 {
+    background-color: #4972b0 !important;
+    color: #FFF;
+}
+
+.category-4 {
+    background-color: #e08244 !important;
+    color: #FFF;
+}
+
+.category-5 {
+    background-color: #4fac5b !important;
+    color: #FFF;
+}
+
+.category-6 {
+    background-color: #d53b07 !important;
+    color: #FFF;
+}
+
+.category-7 {}
+
+.carousel-control .glyphicon {
+    text-shadow: none;
 }
 
 .carousel-control .glyphicon {
@@ -43,25 +100,8 @@
     background-image: none !important;
 }
 
-
-/* MARKETING CONTENT
--------------------------------------------------- */
-
-
-/* Center align the text within the three columns below the carousel */
-
-.marketing .col-lg-4 {
-    margin-bottom: 20px;
-    text-align: center;
-}
-
-.marketing h2 {
-    font-weight: 400;
-}
-
-.marketing .col-lg-4 p {
-    margin-right: 10px;
-    margin-left: 10px;
+.carousel-caption p {
+    color: #000;
 }
 
 
@@ -76,45 +116,28 @@
 
 /* Thin out the marketing headings */
 
-.featurette-heading {
-    font-weight: 300;
-    line-height: 1;
-    letter-spacing: -1px;
-}
-
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 
-@media (min-width: 768px) {
-    /* Navbar positioning foo */
-    .navbar-wrapper {
-        margin-top: 20px;
-    }
-    .navbar-wrapper .container {
-        padding-right: 15px;
-        padding-left: 15px;
-    }
-    .navbar-wrapper .navbar {
-        padding-right: 0;
-        padding-left: 0;
-        border-radius: 4px;
-        /* The navbar becomes detached from the top, so we round the corners */
-    }
-    /* Bump up size of carousel content */
+@media only screen and (max-width: 414px) {
     .carousel-caption p {
-        margin-bottom: 20px;
-        font-size: 21px;
-        line-height: 1.4;
-        color: #000;
+        font-size: 9pt;
     }
-    .featurette-heading {
-        font-size: 50px;
+    .carousel-caption h3 {
+        font-size: 12pt;
+    }
+    .carousel,
+    .carousel .item {
+        height: 400px;
     }
 }
 
-@media (min-width: 992px) {
-    .featurette-heading {
-        margin-top: 120px;
+@media (min-width: 768px) {
+    /* Bump up size of carousel content */
+    .carousel-caption p {
+        margin-bottom: 20px;
+        font-size: 1em;
+        line-height: 1.4;
     }
 }
